fix: hide overflow on html and body elements to prevent scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+html,body{
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
